--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@ var TestApp = {
 <body>
 	<p><span style="font-size:32px; font-weight:bold;">Тест устройств сканирования на ТТ</span></p>
 	<div>
-		<a class='simple-button skd-font' href='/prweb/PRRestService/SmUserEnv/v1/testUserEnv?jnlp=true' id='startBtn'>1. Запустить</a>
+		<a class='simple-button skd-font' href='/scanapp.jnlp' id='startBtn'>1. Запустить</a>
 	</div>
 		<br/>
 	<table cols="3">
