--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html> 
 <head> <meta charset="utf-8">
-	<title>Тест устройств сканирования на ТТ</title>
+	<title>Тест устройств сканирования Флекс</title>
 	<meta charset="utf-8">
 <style type="text/css">
 	.skd-main-montainer{
@@ -434,7 +434,7 @@ var TestApp = {
 }	
 </script>
 <body>
-	<p><span style="font-size:32px; font-weight:bold;">Тест устройств сканирования на ТТ</span></p>
+	<p><span style="font-size:32px; font-weight:bold;">Тест устройств сканирования Флекс</span></p>
 	<div>
 		<a class='simple-button skd-font' href='scanapp.jnlp' id='startBtn'>1. Запустить</a>
 	</div>
