--- a/index.html
+++ b/index.html
@@ -472,15 +472,12 @@ window.onload = function(){
 
 </script>
 <body>
-	<p><span style="font-size:32px; font-weight:bold;">Тест устройств сканирования на ТТ</span></p>
+	<p><span style="font-size:32px; font-weight:bold;">Тест устройств сканирования Флекс</span></p>
 	<div><span>Состояние: </span><span id=socketStatus></span><img id='imgStatus' style='display:none' src='loading16.gif'/></div>
 	<table cols="3">
 		<tr valign="top"><td>
 				<div><a href='scanapp.jnlp' id='startBtn'><button class='simple-button skd-font' onclick='TestApp.checkState();'>1. Запустить<img src='sc-red-16.png'/></button></a></div>
 		</td></tr>
-		<!--tr valign="top"><td>
-				<div><span>Состояние: </span><span id=socketStatus></span><img id='imgStatus' style='display:none' src='loading16.gif'/></div>
-		</td></tr-->
 		<tr valign="top"><td>
 				<div><button class='simple-button skd-font' id='socketBtn' onclick='TestApp.openSocket();'>2. Подключить</button></div>
 		</td></tr>
